High Contrast: fix drop states
https://bugzilla.gnome.org/show_bug.cgi?id=763823

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2874,11 +2874,19 @@ messagedialog { // Message Dialog styling
   }
 }
 
-GtkFileChooserDialog {
+filechooser {
   .dialog-action-box {
     border-top: 1px solid $borders_color;
+
     &:backdrop { border-top-color: $backdrop_borders_color; }
   }
+
+  #pathbarbox { border-bottom: 1px solid $bg_color; }
+}
+
+filechooserbutton:drop(active) {
+  box-shadow: none;
+  border-color: transparent;
 }
 
 /***********
@@ -3347,7 +3355,8 @@ button.circular { // FIXME: aggregate to buttons
 
 *:drop(active):focus,
 *:drop(active) {
-  border: 1px solid black;
+  border-color: $fg_color;
+  box-shadow: inset 0 0 0 2px fg_color;
 }
 
 stackswitcher button.text-button {
